[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/segoeui.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GroupBox.gd" type="Script" id=2]
[ext_resource path="res://Scenes/General UI Elements/Reset_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Icons/menu_opened.png" type="Texture" id=4]
[ext_resource path="res://Themes/thol_launcher_theme_1.tres" type="Theme" id=5]
[ext_resource path="res://Themes/ContentTree/ContentTree_Focus.tres" type="StyleBox" id=6]
[ext_resource path="res://Themes/ContentTree/ContentTree_Normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Themes/ContentTree/ContentTree_Hover.tres" type="StyleBox" id=8]
[ext_resource path="res://Themes/ContentTree/ContentTree_Pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://Themes/Fonts/thol_launcher_groupbox_font.tres" type="DynamicFont" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.141176, 0.160784, 0 )
border_color = Color( 0.360784, 0.360784, 0.388235, 0.423529 )
border_blend = true
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 31.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=2]
size = 13
outline_color = Color( 0.921569, 0.921569, 0.921569, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="GroupBox_NAME" type="Panel"]
margin_left = 8.0
margin_top = 35.0
margin_right = 477.0
margin_bottom = 124.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 25.0
custom_constants/margin_right = 0
custom_constants/margin_top = -48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox_Video" type="HBoxContainer" parent="MarginContainer"]
margin_top = -48.0
margin_right = 469.0
margin_bottom = 25.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Video" type="Button" parent="MarginContainer/HBox_Video"]
margin_top = 22.0
margin_right = 438.0
margin_bottom = 51.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 0.733333, 0.207843, 1 )
custom_constants/hseparation = 7
text = "Name"
icon = ExtResource( 4 )
flat = true
align = 0

[node name="lbl_Video" type="Label" parent="MarginContainer/HBox_Video"]
visible = false
margin_left = 210.0
margin_top = 23.0
margin_right = 253.0
margin_bottom = 50.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.733333, 0.207843, 1 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_reset" parent="MarginContainer/HBox_Video" instance=ExtResource( 3 )]
margin_left = 438.0
margin_top = 24.0
margin_right = 463.0
margin_bottom = 49.0
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Control2" type="Control" parent="MarginContainer/HBox_Video"]
margin_left = 463.0
margin_right = 469.0
margin_bottom = 73.0
rect_min_size = Vector2( 6, 0 )

[connection signal="pressed" from="MarginContainer/HBox_Video/btn_Video" to="." method="_on_btn_Video_pressed"]
[connection signal="button_pressed" from="MarginContainer/HBox_Video/name_reset" to="." method="_on_name_reset_button_pressed"]
